<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_artists">

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.example.lobsters.ui.artists.ArtistsFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.lobsters.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lobsters.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>