<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="429dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/textFieldLogin"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13dp"
            android:ems="10"/>

        <EditText
            android:id="@+id/textFieldPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="180dp">
        <Button
            android:id="@+id/containedButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_rectangle"
            android:text="@string/inButton"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />
    </LinearLayout>

</FrameLayout>